no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 3828593ddeffcf0fde4a742d1fa8bbc1a453d63d

--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-vi/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-vi/strings.xml
@@ -3963,6 +3963,20 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Kh
 ng
@@ -3973,6 +3987,54 @@ n
 i
 m
 ng
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+C
+v
+nh
+x
+y
+ra
+s
+c
+v
+i
+k
+t
+n
+i
+Internet
+c
+a
+b
+n
 <
 /
 string
@@ -4007,6 +4069,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ki
 m
@@ -4035,6 +4111,124 @@ y
 l
 t
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+H
+y
+th
+k
+t
+n
+i
+tr
+n
+thi
+t
+b
+kh
+c
+.
+Ki
+m
+tra
+modem
+ho
+c
+b
+nh
+tuy
+n
+c
+a
+b
+n
+.
+Ng
+t
+k
+t
+n
+i
+v
+k
+t
+n
+i
+l
+i
+v
+i
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+M
+l
+i
+:
+NS_ERROR_OFFLINE
 <
 /
 string
