--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
@@ -2773,6 +2773,44 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+Ve
+o
+tem
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
