--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
@@ -2797,6 +2797,44 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+L
+s
+mer
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
