--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-vi/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-vi/strings.xml
@@ -3127,6 +3127,47 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+T
+m
+hi
+u
+th
+m
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
