--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-yua/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-yua/strings.xml
@@ -4678,13 +4678,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4745,6 +4761,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4776,6 +4808,49 @@ na
 \
 '
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Ma
+\
+'
+tu
+p
+ajtal
+in
+ts
+\
+'
+ik
+extensi
+n
 <
 /
 string
@@ -5111,6 +5186,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5156,6 +5245,101 @@ ti
 \
 '
 seguridad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+ku
+bin
+tu
+contra
+le
+a
+\
+'
+almaj
+t
+\
+'
+aano
+\
+'
+ob
+Mozilla
+y
+etel
+ma
+\
+'
+tu
+p
+ajtal
+u
+ts
+\
+'
+a
+\
+'
+abal
+ti
+\
+'
+%
+2
+s
 .
 <
 /
@@ -5281,6 +5465,198 @@ le
 plataformaa
 \
 '
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+%
+1
+s
+ku
+bin
+tu
+contra
+le
+a
+\
+'
+almaj
+t
+\
+'
+aano
+\
+'
+ob
+Mozilla
+y
+etel
+ma
+\
+'
+tu
+p
+ajtal
+u
+ts
+\
+'
+a
+\
+'
+abal
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+ku
+bin
+tu
+contra
+le
+a
+\
+'
+almaj
+t
+\
+'
+aano
+\
+'
+ob
+Mozilla
+y
+etel
+ma
+\
+'
+tu
+p
+ajtal
+u
+ts
+\
+'
+a
+\
+'
+abal
+ti
+\
+'
+%
+2
+s
 .
 <
 /
@@ -6449,6 +6825,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ilawil
+u
+tsoolil
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -6491,6 +6903,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6519,6 +6945,377 @@ ti
 seguridad
 wa
 estabilidad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Le
+extensi
+n
+je
+\
+'
+ela
+\
+'
+t
+an
+bloqueada
+tumen
+violar
+le
+pol
+ticas
+Mozilla
+y
+etel
+ts
+\
+'
+o
+\
+'
+ok
+u
+desactivado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Le
+extensi
+na
+\
+'
+ku
+bin
+tu
+contra
+le
+pol
+ticas
+Mozilla
+y
+etel
+ts
+\
+'
+o
+\
+'
+ok
+u
+desactivado
+.
+Je
+\
+'
+el
+u
+p
+ajtal
+u
+t
+\
+'
+abik
+ba
+\
+'
+ale
+\
+'
+je
+\
+'
+el
+u
+p
+ajtal
+u
+yantal
+riesgo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Le
+extensi
+na
+\
+'
+yaan
+restringida
+tumen
+u
+violar
+le
+pol
+ticas
+Mozilla
+y
+etel
+ts
+\
+'
+o
+\
+'
+ok
+u
+desactivado
+.
+Je
+\
+'
+el
+u
+p
+ajtal
+u
+t
+\
+'
+abik
+ba
+\
+'
+ale
+\
+'
+je
+\
+'
+el
+u
+p
+ajtal
+u
+yantal
+riesgo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Le
+extensi
+na
+\
+'
+ku
+bin
+tu
+contra
+le
+pol
+ticas
+Mozilla
+.
+U
+b
+ukinta
+\
+'
+al
+je
+\
+'
+el
+u
+p
+ajtal
+u
+yantal
+riesgo
 .
 <
 /
