--- a/mobile/android/fenix/app/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fy-rNL/strings.xml
@@ -23112,7 +23112,7 @@ name
 phone_feature_blocked_by_android
 "
 >
-Blokkeare
+Blokkearre
 troch
 Android
 <
@@ -25874,7 +25874,7 @@ name
 notification_re_engagement_text
 "
 >
-Sneupje
+Sneup
 s
 nder
 bewarre
