--- a/mobile/android/fenix/app/src/main/res/values-kk/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-kk/strings.xml
@@ -3030,6 +3030,72 @@ string
 Browser
 menu
 banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+&
+quot
+;
+%
+s
+&
+quot
+;
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 link
 text
 for
@@ -7610,6 +7676,110 @@ string
 -
 -
 Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+-
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
 add
 -
 ons
@@ -7827,6 +7997,47 @@ UnusedResources
 >
 uBlock
 Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
 <
 /
 string
@@ -8250,6 +8461,38 @@ name
 onboarding_add_on_add_button_content_description
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+:
+5
+%
+1
+s
 <
 /
 string
@@ -21187,6 +21430,43 @@ string
 !
 -
 -
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Collections
 -
 -
@@ -23521,6 +23801,69 @@ name
 snackbar_message_bookmarks_saved
 "
 >
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+&
+quot
+;
+%
+s
+&
+quot
+;
 !
 <
 /
