--- a/mobile/android/fenix/app/src/main/res/values-ru/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-ru/strings.xml
@@ -18643,6 +18643,41 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
@@ -18749,6 +18784,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 !
@@ -19651,13 +19700,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 :
 %
@@ -20068,13 +20110,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -23754,6 +23789,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 !
 <
@@ -23801,13 +23850,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
