--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-es-rCL/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-es-rCL/strings.xml
@@ -3274,12 +3274,66 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sin
 conexi
 n
 a
 internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Parece
+que
+hay
+un
+problema
+con
+tu
+conexi
+n
+a
+Internet
 <
 /
 string
@@ -3314,6 +3368,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Revisa
 tu
@@ -3333,6 +3401,101 @@ en
 un
 rato
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Intenta
+conectarte
+en
+un
+dispositivo
+diferente
+.
+Verifica
+tu
+m
+dem
+o
+router
+.
+Descon
+ctate
+y
+vuelve
+a
+conectarte
+a
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+de
+error
+:
+NS_ERROR_OFFLINE
 <
 /
 string
