--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-ia/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-ia/strings.xml
@@ -3191,11 +3191,66 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nulle
 connexion
 a
 Internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Il
+pare
+que
+il
+ha
+un
+problema
+con
+tu
+connexion
+internet
+.
 <
 /
 string
@@ -3230,6 +3285,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verifica
 tu
@@ -3245,6 +3314,100 @@ post
 alcun
 momentos
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Prova
+a
+connecter
+te
+ab
+un
+altere
+apparato
+.
+Controla
+le
+modem
+o
+le
+router
+.
+Disactiva
+e
+reactiva
+le
+connexion
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Codice
+de
+error
+:
+NS_ERROR_OFFLINE
 <
 /
 string
