--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-yua/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-yua/strings.xml
@@ -4608,6 +4608,20 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Mina
 \
@@ -4623,6 +4637,48 @@ n
 ti
 \
 '
+internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Bey
+yaan
+jump
+\
+'
+el
+talamil
+y
+etel
+le
+conexi
+n
 internet
 <
 /
@@ -4657,6 +4713,20 @@ name
 =
 "
 mozac_browser_errorpages_no_internet_message
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 B
@@ -4701,6 +4771,127 @@ utuko
 '
 ob
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+K
+\
+'
+aax
+u
+conectar
+ti
+\
+'
+jump
+\
+'
+el
+nu
+\
+'
+ukulil
+jela
+\
+'
+an
+.
+Ilawil
+a
+m
+dem
+wa
+a
+router
+.
+Desconecte
+y
+etel
+k
+\
+'
+a
+\
+'
+conectar
+ti
+\
+'
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+ba
+\
+'
+alo
+\
+'
+:
+NS_ERROR_OFFLINE
 <
 /
 string
