--- a/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
@@ -21279,6 +21279,49 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+Est
+seguro
+de
+querer
+borrar
+los
+tems
+seleccionados
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
@@ -21394,6 +21437,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Marcador
@@ -22375,13 +22432,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Elementos
 borrados
@@ -22870,13 +22920,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Nueva
@@ -26928,6 +26971,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Marcadores
 guardados
@@ -26977,13 +27034,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Marcadores
