no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 10a1e7c8284954ea8f54004b09f2700710a59d18

--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sk/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sk/strings.xml
@@ -3219,11 +3219,68 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 iadne
 pripojenie
 k
 internetu
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Zd
+sa
+e
+sa
+vyskytol
+probl
+m
+s
+va
+m
+internetov
+m
+pripojen
+m
 <
 /
 string
@@ -3258,6 +3315,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Skontrolujte
 pripojenie
@@ -3274,6 +3345,100 @@ o
 chv
 u
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Sk
+ste
+sa
+pripoji
+na
+inom
+zariaden
+.
+Skontrolujte
+modem
+alebo
+smerova
+.
+Odpojte
+sa
+a
+znova
+sa
+pripojte
+k
+sieti
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+K
+d
+chyby
+:
+NS_ERROR_OFFLINE
 <
 /
 string
