--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sl/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sl/strings.xml
@@ -3226,6 +3226,62 @@ string
 -
 -
 The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Poskusite
+se
+povezati
+z
+drugo
+napravo
+.
+Preverite
+modem
+ali
+usmerjevalnik
+.
+Odklopite
+in
+ponovno
+pove
+ite
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
 document
 title
 and
