--- a/mobile/android/fenix/app/src/main/res/values-zh-rCN/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-zh-rCN/strings.xml
@@ -18533,6 +18533,40 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
