--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sk/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sk/strings.xml
@@ -2862,6 +2862,45 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+al
+ie
+inform
+cie
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
