--- a/mobile/android/fenix/app/src/main/res/values-iw/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-iw/strings.xml
@@ -18584,6 +18584,41 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
@@ -18690,6 +18725,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 !
@@ -19590,13 +19639,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 :
 %
@@ -20007,13 +20049,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -23688,6 +23723,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 !
 <
@@ -23735,13 +23784,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
