--- a/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
@@ -9447,6 +9447,39 @@ Content
 description
 for
 the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Gumb
+za
+namestitev
+dodatka
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
 star
 rating
 group
